--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,12 @@ android {
 
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.0.0')
+    // Add this to your app/build.gradle
+    implementation 'com.firebase:geofire-android-common:3.1.0'
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.firebaseui:firebase-ui-auth:8.0.2'
+    implementation 'com.android.volley:volley:1.2.1'
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
