--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,11 @@
         android:theme="@style/MealMingle"
         tools:targetApi="31">
         <activity
+            android:name=".History"
+            android:exported="true" />
+        <activity
             android:name=".ProfileActivityActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
