--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.2",
-    "firebase": "^9.22.0",
+    "firebase": "^9.23.0",
+    "leaflet": "^1.9.4",
     "material-icons": "^1.13.6",
+    "ngeohash": "^0.6.3",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
