--- a/firebase.json
+++ b/firebase.json
@@ -16,6 +16,17 @@
         "source": "**",
         "destination": "/index.html"
       }
+    ],
+    "headers": [
+      {
+        "source": "**/*.@(jpg|jpeg|gif|png|svg|js|css|json|woff|woff2|ttf|eot|html|js|css|map|woff|woff2|ttf|eot|otf)",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "max-age=86400"
+          }
+        ]
+      }
     ]
   },
   "storage": {
